# plp_final_project

./: .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  WARP.md  app.py  database_config.py  deploy-railway.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json  render-build.sh  render.yaml  requirements-streamlit.txt  requirements.txt  setup.py  start.sh  startup.py  streamlit_app.py  test_db.py  wsgi.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
ai/: system_prompt.txt
apps/backend/: Dockerfile  package.json
apps/backend/src/: app.ts  index.ts  openapi.ts  security.ts
apps/frontend/: index.html  package.json
backend/: Dockerfile  alembic.ini  auth.py  config.py  database.py  env.example  launch.py  main.py  models.py  payments.py  railway.json  requirements.txt  schemas.py  seed_data.py  setup.py
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  ai_module.py  auth.py  auth_router.py  crowdfunding.py  dashboard.py  database.py  loans.py  main.py  poverty_map.py  profile.py  transactions.py
backend/routers/: admin.py  ai.py  auth.py  businesses.py  donors.py  families.py  geospatial.py
db/migrations/: 001_init.sql  002_seed.sql
frontend/: .env.example  .gitignore  Dockerfile  README.md  app.py  package.json  railway.json  render.yaml  requirements.txt  setup_env.ps1  streamlit_app.py
frontend/.streamlit/: config.toml
frontend/src/: __init__.py  app.py  config.py  utils.py
frontend/templates/: index.html
(+97 files in other folders)
