[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poverty-alleviation-platform"
version = "0.1.0"
description = "Poverty Alleviation Platform - A platform to help alleviate poverty through microfinance and community support"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy[asyncio]==2.0.25",
    "alembic==1.13.0",
    "asyncpg==0.28.0",
    "psycopg2-binary==2.9.9",
    "passlib[bcrypt]==1.7.4",
    "PyJWT==2.8.0",
    "cryptography==41.0.7",
    "python-jose[cryptography]==3.3.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0.post1",
    "anyio==3.7.1",
    "asgiref==3.7.2",
    "python-dateutil==2.8.2",
    "python-slugify==8.0.1",
    "PyYAML==6.0.1",
    "jinja2==3.1.2",
    "itsdangerous==2.1.2",
    "markupsafe==2.1.3"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2"
]
